--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -21,28 +21,29 @@
     "etherscan:verify:mainnet": "npx hardhat run scripts/etherscanVerify.ts --network mainnet"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/contracts": "^4.6.0",
-    "@typechain/ethers-v5": "^10.0.0",
-    "@typechain/hardhat": "^6.0.0",
+    "@openzeppelin/contracts": "^4.7.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.29",
+    "@types/node": "^18.0.4",
     "@types/prompt-sync": "^4.1.1",
     "chai": "^4.3.6",
     "chalk": "^4.1.2",
     "cli-select": "^1.1.2",
-    "erc721a": "^3.3.0",
+    "erc721a": "^4.1.0",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4",
+    "ethers": "^5.6.9",
     "figures": "^4.0.1",
-    "hardhat": "^2.9.3",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "hardhat": "^2.10.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-dev.23",
     "prompt-sync": "^4.2.0",
-    "ts-node": "^10.7.0",
-    "typechain": "^8.0.0",
-    "typescript": "^4.6.3"
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4"
   }
 }
